# WatermelonDB

./: .eslintrc.yml  .gitignore  .npmignore  .yarnrc  Agents.md  CHANGELOG-Unreleased.md  WatermelonDB.podspec  babel.config.js  jest.config.js  package.json  react-native.config.js  tsconfig.json
docs/: Query.html  Schema.html  native-sync.md
docs/Advanced/: Migrations.html
native/android/: README.md  build.gradle
native/android/libs/: sqlite-android.aar  zstd-jni.aar
native/android/libs/sqlite-android-extracted/: AndroidManifest.xml
native/android/src/androidTest/: AndroidManifest.xml
native/android/src/androidTest/java/com/nozbe/watermelondb/: DatabaseTest.kt
native/android/src/main/cpp/: CMakeLists.txt  JSIAndroidBridgeInstaller.cpp  JSIAndroidBridgeModule.cpp  JSIAndroidBridgeModule.h  JSIAndroidBridgeWrapper.cpp  JSIAndroidBridgeWrapper.h  JSIAndroidUtils.cpp  JSIAndroidUtils.h  SQLiteConnection.h  SliceImportDatabaseAdapterAndroid.cpp  SliceImportDatabaseAdapterAndroid.h  SlicePlatformAndroid.cpp  SlicePlatformAndroidQueue.h  SyncPlatformAndroid.cpp
native/android/src/main/java/com/nozbe/watermelondb/: Database.kt  DatabaseBridge.kt  DatabaseDriver.kt  DatabaseUtils.kt  ZstdFileUtil.kt
native/android/src/main/java/com/nozbe/watermelondb/jsi/: JSIAndroidBridgeInstaller.java
native/android/src/main/java/com/nozbe/watermelondb/slice/: SliceDownloadManager.kt
native/android/src/main/java/com/nozbe/watermelondb/sync/: BackgroundSyncBridge.kt  BackgroundSyncScheduler.kt  BackgroundSyncWorker.kt  SyncHttpManager.kt  SyncSocketClient.kt  SyncSocketManager.kt
native/androidTest/: build.gradle  gradle.properties  settings.gradle
native/androidTest/app/: build.gradle
native/androidTest/app/src/androidTest/java/com/nozbe/watermelonTest/: BridgeTest.kt  SmokeTest.kt
native/androidTest/app/src/main/: AndroidManifest.xml
native/androidTest/app/src/main/java/com/nozbe/watermelonTest/: MainApplication.kt
native/androidTest/gradle/wrapper/: gradle-wrapper.properties
native/ios/WatermelonDB/: BackgroundSyncBridge.h  BackgroundSyncBridge.mm  Database.swift  DatabaseBridge.m  DatabaseBridge.swift  DatabaseDriver.swift  SliceImportDatabaseAdapter.h  SliceImportDatabaseAdapter.mm  SlicePlatformIOS.mm  SyncPlatformIOS.mm  SyncSocketClient.swift  WatermelonDBBackgroundSync.swift  ZstdFileUtil.h  ZstdFileUtil.m
native/ios/WatermelonDB.xcodeproj/: project.pbxproj
native/ios/WatermelonDB/FMDB/src/fmdb/: FMDatabase.m
native/ios/WatermelonDB/JSISwiftWrapper/: JSISwiftWrapper.mm  JSISwiftWrapperModule.h  JSISwiftWrapperModule.mm  JSIWrapperUtils.h  JSIWrapperUtils.mm  OnLoad.mm
native/ios/WatermelonDB/SliceImports/: SliceImporter.h  SliceImporter.mm
native/ios/WatermelonDB/SupportingFiles/: Bridging.h
native/ios/WatermelonDBTests/: BridgingHeader.h  main.swift  run-tests.sh
native/shared/: Database-batch.cpp  Database-query.cpp  Database.h  DatabaseBridge.cpp  JsonUtils.h  README.md  Simdjson.cpp  SliceDecoder.cpp  SliceDecoder.h  SliceImportEngine.cpp  SliceImportEngine.h  SlicePlatform.h  SqliteInsertHelper.cpp  SqliteInsertHelper.h  SyncApplyEngine.cpp  SyncApplyEngine.h  SyncEngine.cpp  SyncEngine.h  SyncPlatform.h
native/shared/tests/: CMakeLists.txt  DatabaseUtilsTests.cpp  PlatformStubs.cpp  README.md  SliceDecoderTests.cpp  SliceImportEngineTests.cpp  SqliteInsertHelperTests.cpp  SyncApplyEngineTests.cpp  SyncEngineTests.cpp  run_cpp_tests.sh
native/specs/: NativeWatermelonDBModule.ts
scripts/: make.js  publish.js
src/: index.ts
src/Collection/: RecordCache.test.js  RecordCache.ts  index.ts  onCacheMiss-reset.test.js  test.js
src/Database/: index.js  index.ts  notify.test.js  test.js
src/Query/: index.ts
src/QueryDescription/: index.ts  test.js
src/Relation/: helpers.ts  index.ts
src/Schema/: index.ts
src/Schema/migrations/: index.js  index.ts  stepsForMigration.ts  test.js
src/adapters/: compat.js  compat.ts  error.test.ts  error.ts  type.ts
src/adapters/__tests__/: commonTests.js
src/adapters/lokijs/: index.ts
src/adapters/lokijs/worker/: executor.ts
src/adapters/sqlite/: index.ts  type.ts
src/adapters/sqlite/encodeQuery/: index.ts  test.js
src/adapters/sqlite/encodeSchema/: index.ts  test.js
src/adapters/sqlite/makeDispatcher/: index.native.js  index.native.ts  index.ts  testDispatcher.ts
src/adapters/sqlite/makeDispatcher/node/: Database.ts  DatabaseBridge.ts  DatabaseDriver.ts
src/adapters/sqlite/makeDispatcher/node/__tests__/: execSqlQueryOnWriter.test.js
src/decorators/: common.ts
src/decorators/json/: index.ts
src/decorators/lazy/: index.ts
src/decorators/relation/: index.ts
src/observation/encodeMatcher/: operators.ts
src/observation/subscribeToCount/: index.ts
src/observation/subscribeToQueryWithColumns/: index.ts
src/observation/subscribeToSimpleQuery/: index.ts
src/sync/: SyncManager.test.js  SyncManager.ts  nativeSync.test.js  nativeSync.ts
src/utils/fp/hasIn/: index.ts
src/utils/rx/: index.ts
src/utils/rx/__wmelonRxShim/: index.ts
